[gd_scene load_steps=2 format=3 uid="uid://bep48wn7duio"]

[ext_resource type="Script" path="res://Main Menu/main_menu.gd" id="1_q63h7"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q63h7")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.417
anchor_top = 0.356
anchor_right = 0.417
anchor_bottom = 0.356
offset_left = -19.384
offset_top = -77.688
offset_right = 186.616
offset_bottom = -48.688
grow_horizontal = 2
grow_vertical = 2
text = "Welcome to Space Shooter"

[node name="single" type="Button" parent="."]
layout_mode = 0
offset_left = 504.0
offset_top = 223.0
offset_right = 611.0
offset_bottom = 254.0
text = "Single Player
"

[node name="multi" type="Button" parent="."]
layout_mode = 0
offset_left = 506.0
offset_top = 283.0
offset_right = 607.0
offset_bottom = 314.0
text = "Multi Player"

[node name="quit" type="Button" parent="."]
layout_mode = 0
offset_left = 540.0
offset_top = 346.0
offset_right = 582.0
offset_bottom = 377.0
text = "Quit"

[connection signal="pressed" from="single" to="." method="_on_single_pressed"]
[connection signal="pressed" from="multi" to="." method="_on_multi_pressed"]
[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]
